# Neptune-IC

./: .gitignore  CMakeLists.txt  LICENCE  README.md  compile_flags.txt  grades.json  main.cpp  profiles.json  profilesExample.json  settings.json
src/: exceptions.hpp  help_text.cpp  main.cpp  microsoft.py  profile.hpp  settings.hpp  ui.hpp  user.hpp
userJson/: James_123.json  James_grades.json  James_students.json
